# Dapoer-Attauhid

./: .env  .gitignore  Cargo.toml  catering.sqlite
migrations/: 202506110001_init.sql
src/: auth.rs  db.rs  hash.rs  main.rs  models.rs
