[package]
name = "catering_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.9", features = ["cookie-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite", "uuid", "migrate"] }
dotenvy = "0.15"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
env_logger = "0.11"

